src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Admission_Decision__c</fullName>
        <label>Admission Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Admission_Decision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agree_To_Affirmation_Response__c</fullName>
        <description>The response from the applicant about the Affirmation of Faith</description>
        <inlineHelpText>The response from the applicant about the Affirmation of Faith</inlineHelpText>
        <label>Agree To Affirmation Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agree_To_Affirmation__c</fullName>
        <description>Specifies if the applicant agrees to the Affirmation of Faith</description>
        <inlineHelpText>Specifies if the applicant agrees to the Affirmation of Faith</inlineHelpText>
        <label>Agree To Affirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agree_To_Community_Agreement_Response__c</fullName>
        <description>The response from the applicant about the Community Agreement</description>
        <inlineHelpText>The response from the applicant about the Community Agreement</inlineHelpText>
        <label>Agree To Community Agreement Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agree_To_Community_Agreement__c</fullName>
        <description>Specifies if the applicant agrees with the Community Agreement</description>
        <inlineHelpText>Specifies if the applicant agrees with the Community Agreement</inlineHelpText>
        <label>Agree To Community Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agree_To_Covenant_Response__c</fullName>
        <description>Applicants response if they do not agree with the Covenant</description>
        <inlineHelpText>Applicants response if they do not agree with the Covenant</inlineHelpText>
        <label>Agree To Covenant Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agree_To_Covenant__c</fullName>
        <description>Specifies if the applicant agrees to covenant</description>
        <inlineHelpText>Specifies if the applicant agrees to covenant</inlineHelpText>
        <label>Agree To Covenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <description>Type of applicant this is.</description>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Control</label>
        <referenceTo>Application_Control__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>Citizenship of the applicant.</description>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizen</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident Alien</fullName>
                </value>
                <value>
                    <fullName>Not Citizen or Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                    <isActive>false</isActive>
                    <label>Domestic</label>
                </value>
                <value>
                    <fullName>International</fullName>
                    <isActive>false</isActive>
                    <label>International</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_Credits_Transferred__c</fullName>
        <description>Applicants response to how many college credits will be transferring</description>
        <inlineHelpText>Applicants response to how many college credits will be transferring</inlineHelpText>
        <label>College Credits Transferred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No transfer credits</fullName>
                </value>
                <value>
                    <fullName>1-30 transfer credits</fullName>
                </value>
                <value>
                    <fullName>More than 30 transfer credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Applicant comments about anything they would like to share regarding their application</description>
        <inlineHelpText>Applicant comments about anything they would like to share regarding their application</inlineHelpText>
        <label>Comments</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Requirements_For_Degree__c</fullName>
        <description>Specifies if the applicant has already completed the requirements for a bachelors degree</description>
        <inlineHelpText>Specifies if the applicant has already completed the requirements for a bachelors degree</inlineHelpText>
        <label>Completed Requirements For Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Bachelor of Arts</fullName>
                </value>
                <value>
                    <fullName>Yes: Bachelor of Science</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conviction_Description__c</fullName>
        <description>Applicant&apos;s description of a conviction of a crime in any court</description>
        <inlineHelpText>Applicant&apos;s description of a conviction of a crime in any court</inlineHelpText>
        <label>Conviction Description</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <label>Delivery Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Campus</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Type of delivery the student prefers.</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Educational_Background__c</fullName>
        <label>Educational Background</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>AdultFreshman</fullName>
                    <label>Adult Freshman</label>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emotional_And_Interpersonal_Goals_Respon__c</fullName>
        <description>Applicant&apos;s Emotional And Interpersonal Goals Response</description>
        <inlineHelpText>Applicant&apos;s Emotional And Interpersonal Goals Response</inlineHelpText>
        <label>Emotional And Interpersonal Goals Respon</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family_Pastor_Denomination__c</fullName>
        <description>Specifies the denomination of a family member pastor</description>
        <inlineHelpText>Specifies the denomination of a family member pastor</inlineHelpText>
        <label>Family Pastor Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Denominations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follower_Of_Christ__c</fullName>
        <description>Applicants answer to the question: Have you accepted Jesus Christ as your personal Lord and Savior?</description>
        <inlineHelpText>Applicants answer to the question: Have you accepted Jesus Christ as your personal Lord and Savior?</inlineHelpText>
        <label>Follower Of Christ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Been_Convicted_Of_Offense__c</fullName>
        <description>Specifies if the applicant has ever been convicted of an offense involving inappropriate sexual conduct or violent behavior or found guilty of a professional or ethical violation</description>
        <inlineHelpText>Specifies if the applicant has ever been convicted of an offense involving inappropriate sexual conduct or violent behavior or found guilty of a professional or ethical violation</inlineHelpText>
        <label>Has Been Convicted Of Offense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Been_Convicted__c</fullName>
        <description>Specifies if the applicant has ever pled guilty, been adjudicated, or otherwise been convicted of a crime in any court</description>
        <inlineHelpText>Specifies if the applicant has ever pled guilty, been adjudicated, or otherwise been convicted of a crime in any court</inlineHelpText>
        <label>Has Been Convicted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Family_Attended__c</fullName>
        <description>Specifies if applicant has family that attended</description>
        <inlineHelpText>Specifies if applicant has family that attended</inlineHelpText>
        <label>Has Family Attended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>For test class purposes only</description>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Program_Code__c</fullName>
        <formula>Intended_Program__r.Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intended Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intended Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intended_Term_of_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intended Term of Entry</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Applying_For_PSEO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the applicant is applying for Bethel&apos;s PSEO program</description>
        <inlineHelpText>Specifies if the applicant is applying for Bethel&apos;s PSEO program</inlineHelpText>
        <label>Is Applying For PSEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Family_Employee__c</fullName>
        <description>Specifies if applicant has a family member who is an employee</description>
        <inlineHelpText>Specifies if applicant has a family member who is an employee</inlineHelpText>
        <label>Is Family Employee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Family_Pastor__c</fullName>
        <description>Specifies if the applicant has a family member who is a pastor or missionary</description>
        <inlineHelpText>Specifies if the applicant has a family member who is a pastor or missionary</inlineHelpText>
        <label>Is Family Pastor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Transfer_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the applicant is a transfer student</description>
        <inlineHelpText>Specifies if the applicant is a transfer student</inlineHelpText>
        <label>Is Transfer Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_of_Partner_Church__c</fullName>
        <description>Specifies if applicant is a member or employee of an official ministry partner church or organization</description>
        <inlineHelpText>Specifies if applicant is a member or employee of an official ministry partner church or organization</inlineHelpText>
        <label>Member of Partner Church</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ministry_Involvement_Response__c</fullName>
        <description>Applicant&apos;s ministry involvement response</description>
        <inlineHelpText>Applicant&apos;s ministry involvement response</inlineHelpText>
        <label>Ministry Involvement Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offense_Description__c</fullName>
        <description>Applicant&apos;s description of a offense involving inappropriate sexual conduct or violent behavior or found guilty of a professional or ethical violation</description>
        <inlineHelpText>Applicant&apos;s description of a conviction  involving inappropriate sexual conduct or violent behavior or found guilty of a professional or ethical violation</inlineHelpText>
        <label>Offense Description</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Activities__c</fullName>
        <description>Other high school activities or experiences for the applicant</description>
        <inlineHelpText>Other high school activities or experiences for the applicant</inlineHelpText>
        <label>Other Activities</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Colleges__c</fullName>
        <description>Specifies a list of other colleges for which the applicant is applying</description>
        <inlineHelpText>Specifies a list of other colleges for which the applicant is applying</inlineHelpText>
        <label>Other Colleges</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSEO_Approach__c</fullName>
        <description>Applicants response to PSEO Approach</description>
        <inlineHelpText>Applicants response to PSEO Approach</inlineHelpText>
        <label>PSEO Approach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I want to get ahead on college credits</fullName>
                </value>
                <value>
                    <fullName>I want to attend Bethel for PSEO and beyond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSEO_Experience_Response__c</fullName>
        <description>Applicants response to PSEO Experience</description>
        <inlineHelpText>Applicants response to PSEO Experience</inlineHelpText>
        <label>PSEO Experience Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSEO_Live_On_Campus__c</fullName>
        <description>Applicants response to PSEO Live on campus</description>
        <inlineHelpText>Applicants response to PSEO Live on campus</inlineHelpText>
        <label>PSEO Live On Campus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSEO_Number_Of_Courses__c</fullName>
        <description>Applicants response to the number of PSEO courses</description>
        <inlineHelpText>Applicants response to the number of PSEO courses</inlineHelpText>
        <label>PSEO Number Of Courses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Part-time (Approximately 1-3 classes per semester)</fullName>
                </value>
                <value>
                    <fullName>Full-time (Approximately 4-6 classes per semester)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Church__c</fullName>
        <description>The partner church or organization in which the applicant is a member</description>
        <inlineHelpText>The partner church or organization in which the applicant is a member</inlineHelpText>
        <label>Partner Church</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Story_Response__c</fullName>
        <description>Applicant&apos;s personal story response</description>
        <inlineHelpText>Applicant&apos;s personal story response</inlineHelpText>
        <label>Personal Story Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Music_Scholarship__c</fullName>
        <description>Specifies if the applicant plans ot apply for a music performance scholarship</description>
        <inlineHelpText>Specifies if the applicant plans ot apply for a music performance scholarship</inlineHelpText>
        <label>Plan Music Scholarship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Play_Sport_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the applicant plans to play a second NCAA sport</description>
        <inlineHelpText>Specifies if the applicant plans to play a second NCAA sport</inlineHelpText>
        <label>Plan Play Sport 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Play_Sport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the applicant plans to play a NCAA sport</description>
        <inlineHelpText>Specifies if the applicant plans to play a NCAA sport</inlineHelpText>
        <label>Plan Play Sport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Goals_Response__c</fullName>
        <description>Applicant&apos;s professional goals response</description>
        <inlineHelpText>Applicant&apos;s professional goals response</inlineHelpText>
        <label>Professional Goals Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Read_Affirmation__c</fullName>
        <description>Specifies if the applicant read the Affirmation of Faith</description>
        <inlineHelpText>Specifies if the applicant read the Affirmation of Faith</inlineHelpText>
        <label>Read Affirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Covenant__c</fullName>
        <description>Specifies if the applicant read the Covenant</description>
        <inlineHelpText>Specifies if the applicant read the Covenant</inlineHelpText>
        <label>Read Covenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>For test class use only</description>
        <label>Related Object JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_With_Christ_Response__c</fullName>
        <description>Applicants response to describe relationship with Christ</description>
        <inlineHelpText>Applicants response to describe relationship with Christ</inlineHelpText>
        <label>Relationship With Christ Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second program the applicant is considering</description>
        <inlineHelpText>The second program the applicant is considering</inlineHelpText>
        <label>Secondary Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Applications (Secondary Program)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seminary_Response__c</fullName>
        <description>Applicant&apos;s Bethel Seminary response</description>
        <inlineHelpText>Applicant&apos;s Bethel Seminary response</inlineHelpText>
        <label>Seminary Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Significant_People_Response__c</fullName>
        <description>Applicant&apos;s significant people response</description>
        <inlineHelpText>Applicant&apos;s significant people response</inlineHelpText>
        <label>Significant People Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sport_2__c</fullName>
        <description>The second NCAA sport the applicant is planning to play</description>
        <inlineHelpText>The second NCAA sport the applicant is planning to play</inlineHelpText>
        <label>Sport 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sports</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sport__c</fullName>
        <description>The NCAA sport the applicant is planning to play</description>
        <inlineHelpText>The NCAA sport the applicant is planning to play</inlineHelpText>
        <label>Sport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sports</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Type of the student applying.</description>
        <label>Student Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unofficial_ACT_Score__c</fullName>
        <description>Unofficial ACT Score from the applicant</description>
        <inlineHelpText>Unofficial ACT Score from the applicant</inlineHelpText>
        <label>Unofficial ACT Score</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unofficial_SAT_Score__c</fullName>
        <description>Unofficial SAT Score from the applicant</description>
        <inlineHelpText>Unofficial SAT Score from the applicant</inlineHelpText>
        <label>Unofficial SAT Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only used for test classes</description>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Experience_Response__c</fullName>
        <description>Applicant&apos;s volunteer experience response</description>
        <inlineHelpText>Applicant&apos;s volunteer experience response</inlineHelpText>
        <label>Volunteer Experience Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_College_Credits_Earned__c</fullName>
        <description>Specifies when the applicant earned college credits</description>
        <inlineHelpText>Specifies when the applicant earned college credits</inlineHelpText>
        <label>When College Credits Earned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>During High School (PSEO, AP, CLEP, IB, other)</fullName>
                </value>
                <value>
                    <fullName>After High School graduation</fullName>
                </value>
                <value>
                    <fullName>Both during and after High School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Attend_Response__c</fullName>
        <description>Applicant&apos;s response to why they want to attend Bethel</description>
        <inlineHelpText>Applicant&apos;s response to why they want to attend Bethel</inlineHelpText>
        <label>Why Attend Response</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Intended_Program__c</columns>
        <columns>Application_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Admission_Decision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>